# blue-book

./: .cruft.json  .gitignore  Makefile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: README.md  index.md
docs/adr/: adr.md
docs/stylesheets/: links.css
docs/Документация/: Diplodoc.md  DocHub.md  Markvan.md  MyST.md  Obsidian.md  PlantUML.md  bpmn.md  schemio.md  tbls.md  Разобрать.md
docs/Дом/: Аудиокниги.md  Домашний сервер.md  Замедление YouTube.md  Крипта.md  Кухня.md  Медиа-контент.md  Похудение.md  Работа с почтой.md  Расширения для Chrome.md
docs/Дом/Горе-Бренды/: Digma.md  Делимобиль.md
docs/Дом/Для детей/: Алиса.md  Книги.md  Конструкторы.md  Мультфильмы.md
docs/Дом/Пианино по номерам/: Другие.md  Три кота.md
docs/Конференции/: Подготовка презентации.md
docs/Менеджмент/: Intel.md  Вред локальной оптимизации.md  Выгорание.md  Геймификация.md  Зачем обновляться.md  Культурные различия.md  Мыслетопливо.md  Налоги.md  Оценка сроков.md  Прогнозирование.md  Система грейдов.md  Собеседования.md  Стратегическое планирование.md  Теория ограничения систем.md  Техдолг.md  Управление командой.md  Управление организацией.md  Фейлы.md  Холакратия.md
docs/Менеджмент/Когнитивные искажения/: Когнитивные искажения.md
docs/Менеджмент/Лицензии/: Open Source.md  Server Side Public License.md  Всякая дичь.md
docs/Менеджмент/Методологии/: Kanban.md  Scrum.md
docs/Менеджмент/Хантинг/: Интересные приёмы найма.md  Каналы и сайты с вакансиями.md  Про повышение зарплаты.md  Проверка резюме.md  Удалёнка на запад.md
docs/Научпоп/: Эволюция.md
docs/Обучение/: QA.md  Вышмат.md  Книги.md  Навык учиться.md  Русский язык.md  Советы начинающим.md  Стажировки.md  Физика.md  Электроника.md
docs/Обучение/Online курсы/: Бесплатные.md  Площадки для собственных.md  Тесты.md
docs/Обучение/Online тренажёры/: AI.md  Build your own X.md  DevOps.md  HTTP.md  QA.md  SQL.md  git.md  regex.md  Кодинг.md  Менеджмент.md  Пентестинг.md  Сети.md  Утилиты.md  Электроника.md
docs/Обучение/Администрирование Linux/: Оглавление.md
docs/Обучение/Операционные системы/: Xv6.md  С чего начать.md
docs/Обучение/Сети/: Протоколы web.md
docs/Обучение/Языки программирования/: Haskell.md  Python.md  Rust.md
docs/Психология/: Рефлексия.md
docs/Разработка/: Подкасты.md  Техрадар.md  Читшиты.md  Юмор.md
docs/Разработка/Hacktoberfest/: Swag.md
docs/Разработка/No code/: Редакторы.md
docs/Разработка/Админство/: Ansible.md  Certbot.md  KeyDB.md  Linux.md  Observability.md  Red Panda.md  eBPF.md  gitlab.md  netcat.md  ssh.md  Временные виртуалки.md  Логирование.md  Мейнфреймы.md  Прокси.md  Прочие утилиты.md  Сети.md  Утилиты для аудита на VPS.md
docs/Разработка/Алгоритмы/: Big O.md  HyperLogLog.md  Вещественные числа.md  (+4 more)
docs/Физика/: Атмосфера.md  Всякое.md  Квантовая электродинамика.md  Космические угрозы.md  Связь единиц измерения.md
docs/Финансы/: Арсагера.md  Оптимизация налогов.md  Сервисы учёта.md
(+272 files in other folders)
