[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dynamic = ["version"]
authors = [
    {name = "TyVik", email = "bb@tyvik.ru"},
]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.13,<3.15"
name = "blue-book"
description = "Project to deploy Blue book"
#readme = "README.md"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Natural Language :: Russian",
]
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-htmlproofer-plugin>=1.2.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-material==9.5.50",
    "markdown-include==0.8.1",
    "mkdocs-section-index==0.3.9",
    "mkdocs-include-dir-to-nav==1.2.0",
    "mkdocs-glightbox==0.3.7",
]

[project.urls]
Issues = "https://github.com/TyVik/blue-book/issues"
homepage = "https://github.com/TyVik/blue-book"
documentation = "https://TyVik.github.io/blue-book"

[tool.pdm.scripts]
run = {cmd = "mkdocs serve"}
build = {cmd = "mkdocs build --strict"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
